5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1672_2167.log
== TEST (2019-04-27 14:51:13) 
-- CODE:
D = input("Destino")
P = input("Percuso I/IV? ")

if (P == "I"):
	if (D == "Belem"):
		print(350)
	elif (D == "Borba"):
		print(80)
	elif (D == "Coari"):
		print(106)
	elif (D == "Humaita"):
		print(200)
	elif (D == "Manicore"):
		print(150)
	elif (D == "Maues"):
		print(100)
	else:
		print("Destino inexistente")
else:
	if (D == "Belem"):
		print(650)
	elif (D == "Borba"):
		print(152)
	elif (D == "Coari"):
		print(199)
	elif (D == "Humaita"):
		print(390)
	elif (D == "Manicore"):
		print(280)
	elif (D == "Maues"):
		print(190)
	else:
		print("Destino inexistente")
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:51:22) 
-- CODE:
D = input("Destino: ")
P = input("Percuso I/IV? ")

if (P == "I"):
	if (D == "Belem"):
		print(350)
	elif (D == "Borba"):
		print(80)
	elif (D == "Coari"):
		print(106)
	elif (D == "Humaita"):
		print(200)
	elif (D == "Manicore"):
		print(150)
	elif (D == "Maues"):
		print(100)
	else:
		print("Destino inexistente")
else:
	if (D == "Belem"):
		print(650)
	elif (D == "Borba"):
		print(152)
	elif (D == "Coari"):
		print(199)
	elif (D == "Humaita"):
		print(390)
	elif (D == "Manicore"):
		print(280)
	elif (D == "Maues"):
		print(190)
	else:
		print("Destino inexistente")
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 14:51:41) 
-- CODE:
D = input("Destino: ")
P = input("Percuso I/IV? ")

if (P == "I"):
	if (D == "Belem"):
		print(350)
	elif (D == "Borba"):
		print(80)
	elif (D == "Coari"):
		print(106)
	elif (D == "Humaita"):
		print(200)
	elif (D == "Manicore"):
		print(150)
	elif (D == "Maues"):
		print(100)
	else:
		print("Destino inexistente")
else:
	if (D == "Belem"):
		print(650)
	elif (D == "Borba"):
		print(152)
	elif (D == "Coari"):
		print(199)
	elif (D == "Humaita"):
		print(390)
	elif (D == "Manicore"):
		print(280)
	elif (D == "Maues"):
		print(190)
	else:
		print("Destino inexistente")
-- EXECUTION TIME:
0.181741
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:
Destino inexistente
-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:
390
-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:
190
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:51:56) 
-- CODE:
D = input("Destino: ")
P = input("Percuso I/IV? ")

if (P == "I"):
	if (D == "Belem"):
		print(350)
	elif (D == "Borba"):
		print(80)
	elif (D == "Coari"):
		print(106)
	elif (D == "Humaita"):
		print(200)
	elif (D == "Manicore"):
		print(150)
	elif (D == "Maues"):
		print(100)
	else:
		print("Destino inexistente")
else:
	if (D == "Belem"):
		print(650)
	elif (D == "Borba"):
		print(152)
	elif (D == "Coari"):
		print(199)
	elif (D == "Humaita"):
		print(390)
	elif (D == "Manicore"):
		print(280)
	elif (D == "Maues"):
		print(190)
	else:
		print("Destino inexistente")
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 14:52:27) 
-- CODE:
D = input("Destino: ")
P = input("Percuso I/IV? ")

if (P == "I"):
	if (D == "Belem"):
		print(350.00)
	elif (D == "Borba"):
		print(80.00)
	elif (D == "Coari"):
		print(106.00)
	elif (D == "Humaita"):
		print(200.00)
	elif (D == "Manicore"):
		print(150.00)
	elif (D == "Maues"):
		print(100.00)
	else:
		print("Destino inexistente")
else:
	if (D == "Belem"):
		print(650.00)
	elif (D == "Borba"):
		print(152.00)
	elif (D == "Coari"):
		print(199.00)
	elif (D == "Humaita"):
		print(390.00)
	elif (D == "Manicore"):
		print(280.00)
	elif (D == "Maues"):
		print(190.00)
	else:
		print("Destino inexistente")
-- EXECUTION TIME:
0.143235
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:
Destino inexistente
-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:
390.0
-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:
190.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:52:46) 
-- CODE:
D = input("Destino: ")
P = input("Percuso I/IV? ")

if (P == "I"):
	if (D == "Belem"):
		print(350.00)
	elif (D == "Borba"):
		print(80.00)
	elif (D == "Coari"):
		print(106.00)
	elif (D == "Humaita"):
		print(200.00)
	elif (D == "Manicore"):
		print(150.00)
	elif (D == "Maues"):
		print(100.00)
	else:
		print("Destino inexistente")
else:
	if (D == "Belem"):
		print(650.00)
	elif (D == "Borba"):
		print(152.00)
	elif (D == "Coari"):
		print(199.00)
	elif (D == "Humaita"):
		print(390.00)
	elif (D == "Manicore"):
		print(280.00)
	elif (D == "Maues"):
		print(190.00)
	else:
		print("Destino inexistente")
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 14:53:25) 
-- CODE:
D = input("Destino: ")
P = input("Percuso I/IV? ")

if (P == "I"):
	if (D == "Belem"):
		print(350.00)
	elif (D == "Borba"):
		print(80.00)
	elif (D == "Coari"):
		print(106.00)
	elif (D == "Humaita"):
		print(200.00)
	elif (D == "Manicore"):
		print(150.00)
	elif (D == "Maues"):
		print(100.00)
	else:
		print("Destino inexistente")
elif (P == "IV")
	if (D == "Belem"):
		print(650.00)
	elif (D == "Borba"):
		print(152.00)
	elif (D == "Coari"):
		print(199.00)
	elif (D == "Humaita"):
		print(390.00)
	elif (D == "Manicore"):
		print(280.00)
	elif (D == "Maues"):
		print(190.00)
	else:
		print("Destino inexistente")
-- EXECUTION TIME:
0.191928
-- ERROR:
  File "/home/codebench/codes/1672/2167/main.py", line 19
    elif (P == "IV")
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 14:54:57) 
-- CODE:
D = input("Destino: ")
P = input("Percuso ida/ida-e-volta? ")

if (P == "I"):
	if (D == "Belem"):
		print(350.00)
	elif (D == "Borba"):
		print(80.00)
	elif (D == "Coari"):
		print(106.00)
	elif (D == "Humaita"):
		print(200.00)
	elif (D == "Manicore"):
		print(150.00)
	elif (D == "Maues"):
		print(100.00)
	else:
		print("Destino inexistente")
elif (P == "IV")
	if (D == "Belem"):
		print(650.00)
	elif (D == "Borba"):
		print(152.00)
	elif (D == "Coari"):
		print(199.00)
	elif (D == "Humaita"):
		print(390.00)
	elif (D == "Manicore"):
		print(280.00)
	elif (D == "Maues"):
		print(190.00)
	else:
		print("Destino inexistente")
-- EXECUTION TIME:
0.1464
-- ERROR:
  File "/home/codebench/codes/1672/2167/main.py", line 19
    elif (P == "IV")
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 15:00:19) 
-- CODE:
D = input("Destino: ")
P = input("Percuso ida/ida-e-volta? ")

if (D == "Belem"):
	if (P == "ida"):
		print(350.0)
	else:
		print(650.0)
elif (D == "Borba"):
	if (P == "ida"):
		print(80.0)
	else:
		print(152.0)
elif (D == "Coari"):
	if (P == "ida"):
		print(106.0)
	else:
		print(199.0)
elif (D == "Humaita"):
	if (P == "ida"):
		print(200.0)
	else:
		print(390.0)
elif (D == "Manicore"):
	if (P == "ida"):
		print(150.0)
	else:
		print(280.0)
elif (D == "Maues"):
	if (P == "ida"):
		print(100.0)
	else:
		print(190.0)

-- EXECUTION TIME:
0.17576
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:

-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:
200.0
-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:
190.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:01:03) 
-- CODE:
D = input("Destino: ")
P = input("Percuso ida/ida-e-volta? ")

if (D == "Belem"):
	if (P == "ida"):
		print(350.0)
	else:
		print(650.0)
elif (D == "Borba"):
	if (P == "ida"):
		print(80.0)
	else:
		print(152.0)
elif (D == "Coari"):
	if (P == "ida"):
		print(106.0)
	else:
		print(199.0)
elif (D == "Humaita"):
	if (P == "ida"):
		print(200.0)
	else:
		print(390.0)
elif (D == "Manicore"):
	if (P == "ida"):
		print(150.0)
	else:
		print(280.0)
elif (D == "Maues"):
	if (P == "ida"):
		print(100.0)
	else:
		print(190.0)
else:
	print("Destino inexistente")
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 15:01:05) 
-- CODE:
D = input("Destino: ")
P = input("Percuso ida/ida-e-volta? ")

if (D == "Belem"):
	if (P == "ida"):
		print(350.0)
	else:
		print(650.0)
elif (D == "Borba"):
	if (P == "ida"):
		print(80.0)
	else:
		print(152.0)
elif (D == "Coari"):
	if (P == "ida"):
		print(106.0)
	else:
		print(199.0)
elif (D == "Humaita"):
	if (P == "ida"):
		print(200.0)
	else:
		print(390.0)
elif (D == "Manicore"):
	if (P == "ida"):
		print(150.0)
	else:
		print(280.0)
elif (D == "Maues"):
	if (P == "ida"):
		print(100.0)
	else:
		print(190.0)
else:
	print("Destino inexistente")
-- EXECUTION TIME:
0.125508
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:
Destino inexistente
-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:
200.0
-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:
190.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
